Fixed overlapping elements

--- a/wp-content/themes/storefront-child-theme-master/scss/woocommerce/product-page.scss
+++ b/wp-content/themes/storefront-child-theme-master/scss/woocommerce/product-page.scss
@@ -9,7 +9,6 @@
 
     .woocommerce-product-gallery {
       width: 50%;
-      height: 800px;
       background-color: $white;
       border-radius: 5px;
 
